<resources>
    <string name="app_name">GoChat</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="top_to_add_status_update">Top to add status update</string>
    <string name="my_status">My Status</string>
    <string name="recent_updates">Recent updates</string>
    <string name="welcome_to_gochat">Welcome to GoChat</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_to_terms_of_service">Read our Privacy Policy. Tap Agree and continue to accept to Terms of Service.</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="gochat_will_send_an_sms_message_to_verify_your_phone_number_what_s_my_number">GoChat will send an SMS message to verify your phone number. Please enter your number.</string>
    <string name="plus">+</string>
    <string name="_91">91</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="next">Next</string>
    <string name="to_start_calling_contacts_who_have_gochat_tap_button_at_the_bottom_of_your_screen">To start calling contacts who have GoChat, tap button at the bottom of your screen</string>
    <string name="cc">CC</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="did_t_receive_the_otp">Did\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this Mobile Number</string>
    <string name="create_profile">Create Profile</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="type_message">Type Your Message</string>
    <string name="select_users">Select Users</string>
    <string name="gochat">GoChat</string>
    <string name="online">Online</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="are_your_sure_you_want_to_sign_out">Are your sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="offline">Offline</string>
</resources>