<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorSecondary"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/enter_your_phone_number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18ssp" />

            <ImageButton
                android:id="@+id/imageBtnMenu"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_more"
                app:tint="@color/colorTextPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/gochat_will_send_an_sms_message_to_verify_your_phone_number_what_s_my_number"
            android:textAlignment="center"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_14ssp" />

        <Spinner
            android:id="@+id/countryCodeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/plus"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/inputCountryCode"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:fontFamily="@font/ubuntu_medium"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:text="@string/_91"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:cursorVisible="true"
                android:fontFamily="@font/ubuntu_medium"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="13"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/carrier_sms_charges_may_apply"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|bottom">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/next"
                android:textColor="@color/ColorSecondary"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>
</layout>