<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorSecondary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activities.WelcomeScreenActivity">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/welcome_to_gochat"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_26ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imageLogo"/>

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/image_logo"
            app:layout_constraintTop_toTopOf="@+id/textWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textCondition"/>

        <TextView
            android:id="@+id/textCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center|bottom"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_to_terms_of_service"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/agreeBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agreeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/agree_and_continue"
                android:textColor="@color/ColorSecondary"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toTopOf="@+id/textCondition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>