<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.SendOTPActivity">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:tint="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:includeFontPadding="false"
        android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
        android:textAlignment="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_13ssp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:ccp_textSize="@dimen/_12ssp"
            android:background="@drawable/background_input"/>

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/background_input"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:text="@string/send_otp"
            android:textColor="@color/ColorSecondary"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>