<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:includeFontPadding="false"
        android:text="@string/create_profile"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:riv_corner_radius="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/imageAdd"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/background_add_profile"
            android:src="@drawable/ic_camera"
            android:padding="@dimen/_10sdp"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageProfile"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:orientation="horizontal"
        android:background="@drawable/background_input"
        android:padding="@dimen/_8sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_person"
            app:tint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntu_bold"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorTextPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/background_input"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_about"
            app:tint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/inputAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntu_bold"
            android:background="@drawable/background_input"
            android:hint="@string/about"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorTextPrimary"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:backgroundTint="@color/colorError"
        android:text="@string/save"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorAccent"
        app:cornerRadius="@dimen/_4sdp"/>

</LinearLayout>